<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie App</string>
    <string name="add_your_movie_here">add your movie here</string>
    <string name="add_your_genre">add your genre</string>
    <string name="add_your_director">Add your director</string>
    <string name="add_stars">Add stars</string>
    <string name="add_writer">Add Writer</string>
    <string name="add_summary">Add Summary</string>
    <string name="new_release_movie_list">New Release Movie List</string>
    <string name="top_movie">Top movie</string>
    <string name="movie_list">Movie List</string>
    <string name="new_release_movie">New release movie</string>
    <string name="release_movie">Release Movie</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="new_release_film">New Release Movie</string>
    <string name="top_film">Top Movie</string>
    <string name="profile">profile</string>
    <string name="add_new_movie">Add New Movie</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_name_here" tools:ignore="DuplicateDefinition">Enter your name</string>
    <string name="do_you_like_this_movie">Do you like this movie?</string>
    <string name="what_is_your_favorite_part">what is your favorite part</string>
    <string name="do_you_recommend_this_movie_to_people_watch_it">Do you recommend this movie to people watch it?</string>
    <string name="save_btn">Save</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="do_you_like_the_movie">Do you like the movie?</string>
    <string name="which_part_of_film_is_your_favorite_scene">Which part of film is your Favorite Scene?</string>
    <string name="save_button">Save</string>
    <string name="do_you_recommend_this_to_other_people">Do you recommend this to other people?</string>
    <string name="submit">Submit</string>
    <string name="sign_in_with_your_email">Sign in With your Email</string>
    <string name="enter_your_email_address">Enter your email address</string>

    <string-array name="imdbrating">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>

    </string-array>
    <string-array name="genreChoices">
        <item>Action</item>
        <item>Drama</item>
        <item>Documentary</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Comedy</item>
        <item>Western</item>

    </string-array>


</resources>